--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -28,7 +28,9 @@ jobs:
       - name: Install lintr
         run: install.packages("lintr")
         shell: Rscript {0}
-
+      
       - name: Lint
-        run: lintr::lint("test.R")
+        run: lintr::lint_dir(linters = lintr::with_defaults(assignment_linter = NULL, line_length_linter = NULL, spaces_left_parentheses_linter = NULL), pattern = '[.]R$|[.]Rmd')
         shell: Rscript {0}
+
+    
