--- a/.github/workflows/second.yml
+++ b/.github/workflows/second.yml
@@ -42,5 +42,5 @@ jobs:
         shell: Rscript {0}
 
       - name: Test coverage
-        run: covr::codecov("R", quiet = FALSE)
+        run: covr::codecov("tests", quiet = FALSE)
         shell: Rscript {0}
