--- a/.github/workflows/second.yml
+++ b/.github/workflows/second.yml
@@ -42,5 +42,5 @@ jobs:
         shell: Rscript {0}
 
       - name: Test coverage
-        run: covr::codecov("R/hello.R")
+        run: covr::package_coverage("~/pkg/RLint", quiet = FALSE)
         shell: Rscript {0}
