--- a/.github/workflows/second.yml
+++ b/.github/workflows/second.yml
@@ -28,7 +28,7 @@ jobs:
         shell: Rscript {0}
 
       - name: Cache R packages
-        uses: actions/cache@v2
+        uses: actions/cache@v1
         with:
           path: ${{ env.R_LIBS_USER }}
           key: ${{ runner.os }}-${{ hashFiles('.github/R-version') }}-1-${{ hashFiles('.github/depends.Rds') }}
@@ -42,5 +42,5 @@ jobs:
         shell: Rscript {0}
 
       - name: Test coverage
-        run: covr::package_coverage("~/pkg/RLint", quiet = FALSE)
+        run: covr::codecov()
         shell: Rscript {0}
