--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,13 @@
-Package: testpackage
-Title: A Simple Test Description File to Test Packages
-Version: 1.0.0
-Authors@R: 
-    c(person(given = "Jim",
-             family = "Hester",
-             role = c("aut", "cre"),
-             email = "james.hester@rstudio.com"))
-Description: This is a simple package used to test the workflow files.
-Imports: xml2, curl
-Suggests: covr
-License: GPL (>= 2)
+Package: hello
+Type: Package
+Title: What the Package Does (Title Case)
+Version: 0.1.0
+Author: Who wrote it
+Maintainer: The package maintainer <yourself@somewhere.net>
+Description: More about what it does (maybe more than one line)
+    Use four spaces when indenting paragraphs within the Description.
+License: What license is it under?
+Encoding: UTF-8
+LazyData: true
+Suggests: 
+    testthat
