--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -1,10 +1,9 @@
 on:
   push:
-    branches:
-      - master
+    branches: #[ master ]
+      - "[Ff]eature-*" 
   pull_request:
-    branches:
-      - master
+    branches: [ master ]
 
 name: test-coverage
 
